--- a/holamundo/app/src/main/res/values/strings.xml
+++ b/holamundo/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
 
     <string name="action_settings">Settings</string>
     <string name="yo">Yo</string>
+    <string name="title_activity_constraint_layout">ConstraintLayout</string>
+    <string name="title_activity_frame_layout">FrameLayout</string>
+    <string name="title_activity_linear_layout">LinearLayout</string>
+    <string name="title_activity_relative_layout">RelativeLayout</string>
 </resources>
