--- a/MarvelvsDc/app/src/main/res/values/strings.xml
+++ b/MarvelvsDc/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_settig">SettigActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
