--- a/MarvelvsDc/app/src/main/res/values/strings.xml
+++ b/MarvelvsDc/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_personje">PersonjeActivity</string>
+    <string name="type">Tipo</string>
+    <string name="todo">TODO</string>
 </resources>
